--- a/posts/2021-02-11.md
+++ b/posts/2021-02-11.md
@@ -34,7 +34,7 @@ WHERE mz_logical_timestamp() >= insert_ts
   AND mz_logical_timestamp()  < delete_ts
 GROUP BY content;
 ```
-This should come back with counts for each `content`, but only for records that are "valid": their `insert_ts` and `delete_ts` interval containts the current logical timestamp.
+This should come back with counts for each `content`, but only for records that are "valid": their `insert_ts` and `delete_ts` interval contains the current logical timestamp.
 
 This query will change its results over time. Not just because you might add to and remove from `events`, but because `mz_logical_timestamp()` advances as you stare at your screen.
 
@@ -44,7 +44,7 @@ The main issue really is that it is a *query*. You can ask this question over an
 
 ## Time-Windowed Computation
 
-Until recently, if you tried to create a materialized view of the query above, Materialize would tell you to take a hike. The subject of this post is, at its heart, that you can now do this.
+Until recently, if you tried to create a materialized view of the query above, Materialize would tell you to take a hike. The subject of this post, at its heart, is that you can now do this.
 ```sql
 -- Maintained collection of only valid results.
 CREATE MATERIALIZED VIEW valid_events AS
@@ -58,7 +58,7 @@ What's all this then?
 
 Presumably `valid_events` has the property that if you `SELECT` from it you should see the same results as for the time-windowed `SELECT` in the previous section. That is 100% true.
 
-What is also true is that `valid_events` has enough information from you, in the form of the query itself, to only maintain enough historical detail to answer these questions from now going forward. Once `mz_logical_timestamp()` passes a records `delete_ts` it cannot be seen, and soon will no longer be stored either. The in-memory footprint of `valid_events` stays bounded by the number of records that could still satisfy this constraint (those records that are currently valid, or who may yet become valid in the future).
+What is also true is that `valid_events` has enough information from you, in the form of the query itself, to only maintain enough historical detail to answer these questions from now going forward. Once `mz_logical_timestamp()` passes a record's `delete_ts` it cannot be seen, and soon after will no longer be stored either. The in-memory footprint of `valid_events` stays bounded by the number of records that could still satisfy this constraint (those records that are currently valid, or who may yet become valid in the future).
 
 Strictly speaking in Materialize of today, `events` will maintain the unbounded history, because that is how our `TABLE` implementation works. But if `events` were instead a `SOURCE`, which we do not materialize by default, then you could be up and running with a bounded memory footprint on continually evolving windowed data.
 
@@ -66,7 +66,7 @@ Strictly speaking in Materialize of today, `events` will maintain the unbounded 
 
 Let's do some testing with our table and maintained view. Tables have the nice property that we can interactively update them from within Materialize, rather than spinning up a Kafka cluster.
 
-Let's start with something simple: we'll just look at the records currently present in our `valid` view. Let's define a different view to do that, though:
+Let's start with something simple: we'll just look at the records currently present in our `valid_events` view. Let's define a different view to do that, though, without the aggregation so you can see the raw data:
 ```sql
 -- Maintained collection of only valid results.
 CREATE MATERIALIZED VIEW valid AS
@@ -87,11 +87,8 @@ materialize=>
 Now let's put some data in there. I'm going to just take advantage of the fact that `INSERT` statements can also use `mz_logical_timestamp()` to populate the data with some records that last five seconds.
 ```
 materialize=> insert into events VALUES ('hello', mz_logical_timestamp(), mz_logical_timestamp() + 5000);
-INSERT 0 1
 materialize=> insert into events VALUES ('hello', mz_logical_timestamp(), mz_logical_timestamp() + 5000);
-INSERT 0 1
 materialize=> insert into events VALUES ('hello', mz_logical_timestamp(), mz_logical_timestamp() + 5000);
-INSERT 0 1
 ```
 Each of these were executed by me, a human, and so almost certainly got different `insert_ts` and `delete_ts` timestamps.
 
@@ -134,7 +131,7 @@ materialize=> SELECT *, mz_logical_timestamp() FROM valid;
  hello   | 1613084610799 | 1613084615799 |        1613084615628
 (2 rows)
 ```
-.. and we lost one!
+.. and we lost one! Now that `mz_logical_timestamp` has passed `1613084614890` that record no longer satisfies the predicate, and is no longer present.
 ```text
 materialize=> SELECT *, mz_logical_timestamp() FROM valid;
  content |   insert_ts   |   delete_ts   | mz_logical_timestamp
@@ -150,6 +147,8 @@ materialize=> SELECT *, mz_logical_timestamp() FROM valid;
 (0 rows)
 ```
 Ah, they are all gone. My fingers can rest now.
+
+Although this looks rather similar to re-typing the `SELECT` query that explicitly filters against `mz_logical_timestamp()`, the difference here is that everything is dataflow with updates flowing through it. If we were to `TAIL` the view, we would see exactly the moments at which the collection changes, without polling the system repeatedly.
 
 ## Windows: Sliding and Tumbling
 
