--- a/posts/2021-02-11.md
+++ b/posts/2021-02-11.md
@@ -60,8 +60,6 @@ Presumably `valid_events` has the property that if you `SELECT` from it you shou
 
 What is also true is that `valid_events` has enough information from you, in the form of the query itself, to only maintain enough historical detail to answer these questions from now going forward. Once `mz_logical_timestamp()` passes a record's `delete_ts` it cannot be seen, and soon after will no longer be stored either. The in-memory footprint of `valid_events` stays bounded by the number of records that could still satisfy this constraint (those records that are currently valid, or who may yet become valid in the future).
 
-Strictly speaking in Materialize of today, `events` will maintain the unbounded history, because that is how our `TABLE` implementation works. But if `events` were instead a `SOURCE`, which we do not materialize by default, then you could be up and running with a bounded memory footprint on continually evolving windowed data.
-
 ## A Brief Example
 
 Let's do some testing with our table and maintained view. Tables have the nice property that we can interactively update them from within Materialize, rather than spinning up a Kafka cluster.
@@ -196,6 +194,54 @@ I think they have a special name because they are much easier to implement for n
 ## Going Beyond Count
 
 Perhaps this is obvious, but you can do more than just `count(*)` things. The `valid` view we produced up above, containing all currently valid events, is just like any other materialized view in Materialize, and you can use it as you like. Join it with other temporal relations, put it in a correlated subquery, feed it in to an exotic `jsonb` aggregation.
+
+This is the main difference between what is going on here, and [time-series databases](https://en.wikipedia.org/wiki/Time_series_database) (TSDBs). TSDBs are good at storing historical measurements and serving them up when you ask, but they aren't generally as good at maintaining non-trivial computation over changing data. They can usually handle counts and sums pretty well, but if you want to maintain complex views over your changing, temporal data I recommend trying out Materialize.
+
+Let's do a quick example with some non-trivial joins.
+
+The [TPC-H benchmark](http://www.tpc.org/tpch/) is a collection of 22 decision support queries. To pick one at random, query 3 looks like
+```sql
+SELECT
+    o_orderkey,
+    o_orderdate,
+    o_shippriority,
+    sum(l_extendedprice * (1 - l_discount)) AS revenue
+FROM
+    customer,
+    orders,
+    lineitem
+WHERE
+    c_mktsegment = 'BUILDING'
+    AND c_custkey = o_custkey
+    AND l_orderkey = o_orderkey
+    AND o_orderdate < DATE '1995-03-15'
+    AND l_shipdate > DATE '1995-03-15'
+GROUP BY
+    o_orderkey,
+    o_orderdate,
+    o_shippriority
+ORDER BY
+    revenue DESC,
+    o_orderdate
+LIMIT 10;
+```
+This query determines the top ten unshipped orders by value as of some date (here: `'1995-03-15'`). Wouldn't it be neat to compute it for all dates, continually, as it happens?
+
+Let's imagine changing those two lines, and see what we get.
+```sql
+...
+    AND o_orderdate < mz_logical_timestamp()
+    AND l_shipdate > mz_logical_timestamp()
+...
+```
+The first changed constraint restricts our attention to orders placed before "now", which has the effect of keeping orders out of the query until we've reached their `o_orderdate` column.
+In a real setting, this is probably a bit of a no-op, in that the record probably lands in our input stream around the order date anyhow. For our experiment it will be helpful to keep it, because I'm going to load the data in bulk rather than go back in time to 1995 and stream the data in over seven years; this will prevent all orders from being active immediately.
+
+The second changed constraint restricts our attention to `lineitem` record that have not shipped by "now". This has the effect of deleting the record once we reach `l_shipdate`, effectively garbage collecting that relation for us, which is nice given that `lineitem` is the largest of the input relations (it is a "fact table").
+
+Expressed this way, with temporal filters, the memory footprint of the view will be proportional to the sizes of `orders` and `customer`, plus as much of `lineitem` is present but has not yet shipped. We could even add in a constraint that orders are not *too* old, if we wanted to tighten our memory belt and focus on recent shipping issues.
+
+## Conclusions
 
 There are some limitations. I should have mentioned this earlier.
 
