uncommit from experimenting

--- a/posts/2021-02-11.md
+++ b/posts/2021-02-11.md
@@ -235,11 +235,12 @@ Let's imagine changing those two lines, and see what we get.
 ...
 ```
 The first changed constraint restricts our attention to orders placed before "now", which has the effect of keeping orders out of the query until we've reached their `o_orderdate` column.
-In a real setting, this is probably a bit of a no-op, in that the record probably lands in our input stream around the order date anyhow. For our experiment it will be helpful to keep it, because I'm going to load the data in bulk rather than go back in time to 1995 and stream the data in over seven years; this will prevent all orders from being active immediately.
+In a real setting, this is probably a bit of a no-op, in that the record probably lands in our input stream around the order date anyhow.
+<!-- For our experiment it will be helpful to keep it, because I'm going to load the data in bulk rather than go back in time to 1995 and stream the data in over seven years; this will prevent all orders from being active immediately. -->
 
-The second changed constraint restricts our attention to `lineitem` record that have not shipped by "now". This has the effect of deleting the record once we reach `l_shipdate`, effectively garbage collecting that relation for us, which is nice given that `lineitem` is the largest of the input relations (it is a "fact table").
+The second changed constraint restricts our attention to `lineitem` records that have not shipped by "now". This has the effect of deleting the record once we reach `l_shipdate`, effectively garbage collecting that relation for us, which is nice given that `lineitem` is the largest of the input relations (it is a "fact table").
 
-Expressed this way, with temporal filters, the memory footprint of the view will be proportional to the sizes of `orders` and `customer`, plus as much of `lineitem` is present but has not yet shipped. We could even add in a constraint that orders are not *too* old, if we wanted to tighten our memory belt and focus on recent shipping issues.
+Expressed this way, with temporal filters, the memory footprint of the view will be proportional to the sizes of `orders` and `customer`, plus as much of `lineitem` is present but has not yet shipped. We could even add in a constraint that orders are not *too* old, if we wanted to tighten our memory belt and focus in on recent shipping issues.
 
 ## Conclusions
 
