respond to feedback

--- a/posts/2021-02-11.md
+++ b/posts/2021-02-11.md
@@ -1,6 +1,15 @@
+---
+title: "Windows enough, and Time"
+author: "Frank McSherry"
+editor: "None"
+description: "Introduction to Materialize's temporal filters"
+date: 2021-02-11
+category: "Deep-Dive"
+---
+
 # Windows enough, and Time
 
-[Materialize](https://materialize.com) provides a SQL interface to continually changing data. You write SQL queries as if against static data, and then as your data change we keep the results of your queries automatically up to date, in milliseconds.
+[Materialize](https://materialize.com) provides a SQL interface to work with continually changing data. You write SQL queries as if against static data, and then as your data change we keep the results of your queries automatically up to date, in milliseconds.
 
 Materialize leans hard into the ideal that SQL is what you know best, and what you want to use to look at streaming data. At the same time, there are several tantalizing concepts that native stream processors provide that aren't obviously possible with standard SQL.
 
@@ -45,7 +54,7 @@ The main issue really is that it is *just a query*. You can ask this question ov
 
 Materialize specializes at *maintaining* computations like the above, both because that can make it faster to get your answers out, but also because by specifying what you actually need Materialize can run much more lean. We'll see that now with the query above!
 
-Until recently, if you tried to create a materialized view of the query above, Materialize would tell you to take a hike. The subject of this post, at its heart, is that you can now do it.
+Until recently, if you tried to create a materialized view of the query above, Materialize would tell you to take a hike. The subject of this post is that you can now do it. Moreover, comparing parts of your data to `mz_logical_timestamp()` in views (rather than just in queries) introduces powerful new idioms, ones that we'll explore in this post.
 ```sql
 -- Maintained collection of only valid results.
 CREATE MATERIALIZED VIEW valid_events AS
@@ -307,8 +316,10 @@ An update `(data, time, diff)` normally takes effect at `time` and is in then ef
 (data, max(time, lower), diff)
 (data, upper, -diff)
 ```
-Ignoring corner cases for the moment, this delays the insertion of the record until at least `lower`, and schedules the deletion of the record at `upper`.
+This change delays the insertion of `data` until at least `lower`, and schedules its deletion at `upper`.
 
-There are a variety of corner cases to double check, mostly around what to do if a bound is absent, or if they cross (you wrote the query and supplied the data; Materialize can't rely on them being sane). You'll want to double check that the above makes sense when `diff` is negative (a deletion undoes the window its insertion would have introduced). We also need to update our query optimizer as filters can now do slightly weirder things than they could before, and it is less clear that you should use these filters *e.g.* to drive equi-join planning.
+There are a variety of corner cases to double check, mostly around what to do if a bound is absent, or if they cross (you can write it; we need to make sure it doesn't break). You'll want to double check that the above makes sense when `diff` is negative (a deletion undoes the window its insertion would have introduced). We also need to update our query optimizer as filters can now do slightly weirder things than they could before, and it is less clear that you should use these filters *e.g.* to drive equi-join planning.
 
 But actually, the above is basically the implementation. The whole file comes in at around 300 lines, and that's with comments and a copyright header.
+
+There are surely a lot more lines of code to write in response to all the issues you are about to file, but I'm looking forward to that!
