--- a/posts/2020-08-01.md
+++ b/posts/2020-08-01.md
@@ -325,12 +325,12 @@ The `while` loop iterates as long as we can find a progress statement for whom `
 
 And then we repeat, until we can't find a progress statement that can be cleanly grafted.
 
-The last bit of logic is to look at what evidence we have accumulated, both `self.progress_frontier` and `self.messages_frontier`, and ensure that we report everything up through their lower bound.
+The last bit of logic is to look at what evidence we have accumulated, both `self.progress_frontier` and `self.updates_frontier`, and ensure that we report everything up through their lower bound.
 
 ```rust
     // Check and see if our lower bound exceeds `self.reported_frontier`.
     let mut lower_bound = self.progress_frontier.clone();
-    lower_bound.extend(self.messages_frontier.frontier().iter().cloned());
+    lower_bound.extend(self.updates_frontier.frontier().iter().cloned());
     // If our lower bound is not the same as what we have reported ...
     if lower_bound != self.reported_frontier {
         // Collect updates at times not beyond our new frontier.
