Typo fixups (Matching with Materialize.com blog)

--- a/posts/2020-12-29.md
+++ b/posts/2020-12-29.md
@@ -196,7 +196,7 @@ Expressing a request for a week-long interval would require 10,080 minutes as in
 
 However, no one said you had to use only minutes. Or only hours.
 You can cover most of your hypothetical week with daily aggregates, six at least.
-You can then just grab a few houly aggregates at each end, and a few minutely aggregates if you want those too.
+You can then just grab a few hourly aggregates at each end, and a few minutely aggregates if you want those too.
 
 Let's spell this out with an example, as it will be important to be clear.
 Let's say your request times are
@@ -239,7 +239,7 @@ We'll write some queries in the appendix that automatically produce these interv
 
 ---
 
-For now, let's imagine for now we have your request input in this more expansive representation.
+For now, let's imagine we have your request input in this more expansive representation.
 How might you get your aggregate results out?
 What SQL queries do we need to write to make that happen?
 
