correct error in comment

--- a/posts/2021-02-11.md
+++ b/posts/2021-02-11.md
@@ -210,7 +210,7 @@ The granularity and width of the window is up to you to control, with straight-f
 
 **Tumbling windows** (sometimes: "hopping") are just those coarse-grained sliding windows that slide one unit at a time. Each record contributes to only one window.
 ```sql
--- Slide a 5 second window over temporal data, second-by-second.
+-- Tumble a 1 second window over temporal data, second-by-second.
 CREATE MATERIALIZED VIEW valid_events AS
 SELECT content, count(*)
 FROM events
